@@ -56,8 +56,9 @@
 #' the 'true' history, such as for simulating trait evolution along
 #' phylogenetic branches.
 #' 
-#' Unlike taxa2cladogram, this function does not merge cryptic taxa in output
-#' from simFossilTaxa and I do not offer an option to secondarily drop them.
+#' Unlike \code{taxa2cladogram}, this function does not merge cryptic taxa in output
+#' from \code{simFossilRecord} (via \code{fossilRecord2fossilTaxa})
+#' and I do not offer an option to secondarily drop them.
 #' The tip labels should provide the necessary information for users to drop
 #' such taxa, however. See \link{simFossilRecord}.
 
