@@ -99,7 +99,7 @@ freqRat(rangesDisc,calcExtinction=TRUE)
 
 #est. ext rate = ~0.44 per interval
 #5 time-unit intervals, so ~0.44 / 5 = ~0.08 per time-unite
-#That's pretty close to the generating value of 0.01, used in simFossilTaxa
+#That's pretty close to the generating value of 0.01, used in sampleRanges
 
 \dontrun{
 #################
